--- a/package.json
+++ b/package.json
@@ -4,14 +4,26 @@
   "description": "a chat app using angular and socket",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:server": "nodemon server/app",
+    "dev:client": "rollup -c -w"
   },
   "author": "",
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "angular": "~1.6.6",
+    "angular-route": "~1.6.6",
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
-    "socket.io": "^1.4.4"
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "rollup": "^0.49.1",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-node-resolve": "^3.0.0"
   }
 }
