--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a chat app using angular and socket",
   "main": "app.js",
   "scripts": {
-    "dev:server": "nodemon server/app",
+    "dev:server": "nodemon --inspect server/app",
     "dev:client": "rollup -c -w"
   },
   "author": "",
@@ -13,10 +13,13 @@
   "dependencies": {
     "angular": "~1.6.6",
     "angular-route": "~1.6.6",
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.17.2",
+    "cookie-session": "^1.3.1",
     "express": "^4.13.4",
+    "sequelize": "^4.7.5",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "sqlite3": "^3.1.9"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
